--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "clean": "rm -rf node_modules"
   },
   "dependencies": {
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "vue": "^3.2.20",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
@@ -23,7 +24,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-vue": "^7.20.0",
     "prettier": "^2.2.1"
   }
 }
